Explications de "emphase" dans les règles

--- a/lang/en/rules.html
+++ b/lang/en/rules.html
@@ -1,9 +1,9 @@
 <h2>Formatting rules</h2>
 <dl>
 	<dt><code>_text_</code></dt>
-    <dd>emphasis</dd>
+    <dd>emphasis (italic)</dd>
 	<dt><code>__text__</code></dt>
-    <dd>strong emphasis</dd>
+    <dd>strong emphasis (bold)</dd>
 	<dt><code>@@text@@</code></dt>
     <dd>small code</dd>
 	<dt><code>''text|language|source''</code></dt>
