--- a/lang/fr/rules.html
+++ b/lang/fr/rules.html
@@ -1,9 +1,9 @@
 <h2>Règles de formatage</h2>
 <dl>
 	<dt><code>_texte_</code></dt>
-	<dd>Faire une emphase</dd>
+	<dd>Faire une emphase (italique)</dd>
 	<dt><code>__texte__</code></dt>
-	<dd>Faire une emphase forte</dd>
+	<dd>Faire une emphase forte (gras)</dd>
 	<dt><code>@@texte@@</code></dt>
 	<dd>Faire un petit code</dd>
 	<dt><code>''texte|langue|source''</code></dt>
