- ajout de la syntaxe {{{ }}} à wiki2xhtml - reformatage des règles d'édition

--- a/trunk/lang/en/rules.html
+++ b/trunk/lang/en/rules.html
@@ -16,9 +16,9 @@
     <dd>to add an image, alignment can be L(left), R(right) ou C(centered)</dd>
 	<dt><code>text</code></dt>
     <dd>any simple text will be transformed into paragraphs</dd>
-	<dt><code>!title1, !!title2, !!!title3, ...</code></dt>
+	<dt><code>!title1</code>, <code>!!title2</code>, <code>!!!title3</code>, ...</dt>
     <dd>to make a title level equal to the number of !</dd>
-	<dt><code>-text ou *text</code></dt>
+	<dt><code>-text</code> or <code>*text</code></dt>
     <dd>to make an unordered list</dd>
 	<dt><code>#text</code></dt>
     <dd>to make an ordered list</dd>
@@ -26,9 +26,9 @@
     <dd>to make a definition / a list of definitions</dd>
 	<dt><code>??acronym|title??</code></dt>
     <dd>to make an acronym</dd>
-	<dt><code>[SPACE]text</code></dt>
+	<dt><code>[SPACE]text</code> or <code>{{{text}}}</code></dt>
     <dd>preformatted text, usefull to write small pieces of code</dd>
-	<dt><code>==== or ---- (at least 4)</code></dt>
+	<dt><code>====</code> or <code>----</code> (at least 4)</dt>
     <dd>horizontal line</dd>
 	<dt><code>\</code></dt>
     <dd>If you don't want to process the text with the wiki syntax, put this backslash 
