--- a/trunk/lang/es/rules.html
+++ b/trunk/lang/es/rules.html
@@ -16,9 +16,9 @@
 	<dd>Agregar una imagen, alineación puede valer L (izquierda), D (derecha) o C (centro)</dd>
 	<dt><code>texto</code></dt>
 	<dd>Qualquier texto escrito simplemente será convertido en un párrafo.</dd>
-	<dt><code>!título1, !!título2, !!!título3, etc.</code></dt>
+	<dt><code>!título1</code>, <code>!!título2</code>, <code>!!!título3</code>, etc.</dt>
 	<dd>Crear un título de un nivel igual al nombre de !</dd>
-	<dt><code>-texto o *texto</code></dt>
+	<dt><code>-texto</code> o <code>*texto</code></dt>
 	<dd>Hacer una lista de balazos</dd>
 	<dt><code>#texto</code></dt>
 	<dd>Hacer una lista numerada</dd>
@@ -26,9 +26,9 @@
 	<dd>Hacer una lista de definiciones</dd>
 	<dt><code>??acrónimo|título??</code></dt>
 	<dd>Hacer un acrónimo</dd>
-	<dt><code>[ESPACIO]texto</code></dt>
+	<dt><code>[ESPACIO]texto</code> o <code>{{{texto}}}</code></dt>
 	<dd>El texto será preformateado, útil para escribir pedazos de código fuente</dd>
-	<dt><code>==== o ---- (al menos 4)</code></dt>
+	<dt><code>====</code> o <code>----</code> (al menos 4)</dt>
 	<dd>Una línea de separación horizontal</dd>
 	<dt><code>\</code></dt>
 	<dd>Si usted no quiere que el formato wiki se aplique, ponga una diagonal invertida antes de los caracteres especiales.</dd>
