--- a/trunk/lang/fr/rules.html
+++ b/trunk/lang/fr/rules.html
@@ -16,9 +16,9 @@
 	<dd>Ajouter une image, alignement peut valoir G(auche), D(roite) ou C(entre)</dd>
 	<dt><code>texte</code></dt>
 	<dd>Tout texte écrit simplement sera transformé en paragraphes.</dd>
-	<dt><code>!titre1, !!titre2, !!!titre3, etc</code></dt>
+	<dt><code>!titre1</code>, <code>!!titre2</code>, <code>!!!titre3</code>, etc.</dt>
 	<dd>Créer un titre d'un niveau égal au nombre de !</dd>
-	<dt><code>-texte ou *texte</code></dt>
+	<dt><code>-texte</code> ou <code>*texte</code></dt>
 	<dd>Faire une liste d'éléments non numérotés</dd>
 	<dt><code>#texte</code></dt>
 	<dd>Faire une liste d'éléments numérotés</dd>
@@ -26,9 +26,9 @@
 	<dd>Faire une définition/liste de définitions</dd>
 	<dt><code>??acronyme|titre??</code></dt>
 	<dd>Faire un acronyme</dd>
-	<dt><code>[ESPACE]texte</code></dt>
+	<dt><code>[ESPACE]texte</code> ou <code>{{{texte}}}</code></dt>
 	<dd>Le texte sera préformaté, utile pour écrire des bouts de code</dd>
-	<dt><code>==== ou ---- (au moins 4)</code></dt>
+	<dt><code>====</code> ou <code>----</code> (au moins 4)</dt>
 	<dd>Une ligne de séparation horizontale</dd>
 	<dt><code>\</code></dt>
 	<dd>Si vous ne voulez pas que la syntaxe wiki s'applique, faites précéder les caractères spéciaux par des anti-slashs.</dd>
