--- a/trunk/lang/zh/rules.html
+++ b/trunk/lang/zh/rules.html
@@ -16,9 +16,9 @@
 	<dd>增加图象, 队列可能是G(左), D(右) 或 C(中)</dd>
 	<dt><code>文本</code></dt>
 	<dd>任一简单的文本将被变换成段</dd>
-	<dt><code>!标题一, !!标题二, !!!标题三, ...</code></dt>
+	<dt><code>!标题一</code>, <code>!!标题二</code>, <code>!!!标题三</code>, ...</dt>
 	<dd>使标题水平相等与数字!</dd>
-	<dt><code>-文本 或 *文本</code></dt>
+	<dt><code>-文本</code> 或 <code>*文本</code></dt>
 	<dd>做一张无序的名单</dd>
 	<dt><code>#文本</code></dt>
 	<dd>做一张被定购的名单</dd>
@@ -26,9 +26,9 @@
 	<dd>做定义/ 定义名单</dd>
 	<dt><code>??首字母缩略词|标题??</code></dt>
 	<dd>做首字母缩略词</dd>
-	<dt><code>[空间]文本</code></dt>
+	<dt><code>[空间]文本</code> 或 <code>{{{文本}}}</dt>
 	<dd>被已格式化的文本, 写代码小片断</dd>
-	<dt><code>==== 或 ---- (到少 4)</code></dt>
+	<dt><code>====</code> 或 <code>----</code> (到少 4)</dt>
 	<dd>水平线</dd>
 	<dt><code>\</code></dt>
 	<dd>如果您不想要处理文本以维基句法, 投入这条斜线在特性之前(即: \----)</dd>
